# trie-tools

./: CMakeLists.txt  ChangeLog  README.md  update-revision.pl
include/: tdc_trie.hpp  tdc_trie_mmap.hpp  tdc_trie_speller.hpp  tdc_trie_speller_fst.hpp  tdc_trie_speller_fst_posix.hpp  tdc_trie_speller_fst_windows.hpp  tdc_trie_tokenizer.hpp
posix/: popen_plus.h
src/: CMakeLists.txt  trie-browse.cpp  trie-build.cpp  trie-print.cpp  trie-spell-foma.cpp  trie-spell-hfst.cpp  trie-spell.cpp  trie-tokenize-apertium.cpp  trie-tokenize.cpp
